Add analytics and social media meta tags

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,22 @@
     -->
     <title>Quotes</title>
 
+    <link rel="author" href="https://plus.google.com/+MatejJellus" />
+
+    <meta property="og:site_name" content="juffalow.com" />
+    <meta property="og:title" content="Quotes | Matej 'juffalow' Jellus" />
+    <meta property="og:url" content="https://quotes.juffalow.com" />
+    <meta property="og:type" content="website" />
+    <meta property="og:description" content="React and Relay example project." />
+    <meta property="og:image" content="https://quotes.juffalow.com/react-relay-graphql.png" />
+
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@juffalow" />
+    <meta name="twitter:creator" content="@juffalow" />
+    <meta name="twitter:title" content="Quotes | Matej 'juffalow' Jellus" />
+    <meta name="twitter:description" content="React and Relay example project." />
+    <meta name="twitter:image" content="https://quotes.juffalow.com/react-relay-graphql.png" />
+
     <link
       rel="stylesheet"
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css"
@@ -32,6 +48,15 @@
       integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr"
       crossorigin="anonymous"
     />
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-52531295-7"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-52531295-7');
+    </script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
